# protoss

./: .gitignore  CLAUDE.md  README.md  dune-project  protoss-spec.md  protoss-specs.md  protoss_v1_ship_checklist.md
.github/workflows/: ci.yml
benchmarks/: README.md  run.sh
benchmarks/inputs/: medium_prelude.protoss  medium_pure.protoss  small_pure.protoss
benchmarks/projects/harness_min/: protoss.toml
benchmarks/projects/web_min/: protoss.toml
conformance/self_host/golden/: capability_mismatch.json  cycle_deps.json  malformed_diagnostics.json  sample_capabilities.json  sample_deps.json  sample_fmt.protoss  sample_parse.json  sample_resolve.json  sample_static.json
conformance/self_host/inputs/: capability_mismatch.protoss  cycle.protoss  malformed.protoss
docs/: README.md  backend-architecture.md  canonical-and-formats.md  canonical-formats.md  capabilities.md  cli.md  errors.md  getting-started.md  harness.md  ledger-and-world.md  mcp.md  packaging.md  patches.md  project-structure.md  release-verification.md  self-hosted-typechecker.md  self-hosting.md  syntax-human.md  syntax-sexpr.md  todo-fullstack.md  v1-goals.md  v1-journal.md  verifying-the-docs.md
editors/cursor/protoss-syntax/: README.md  builtins.protoss  extension.js  language-configuration.json  package.json
examples/: alpha_a.protoss  alpha_b.protoss  app.protoss  ask_human.protoss  bad_type.protoss  basic.pt  basic.ptb  basic.ptc  defcap.protoss  effect_sensors.protoss  elm_like.protoss  elm_like_equiv.protoss  import_alpha_a.protoss  import_alpha_b.protoss  import_cycle_a.protoss  import_cycle_b.protoss  inferred_lambdas.protoss  inferred_variants.protoss  list_case.protoss  memo.protoss  missing_capability.protoss  named_types.protoss  pattern_match.protoss  polymorphic_aliases.protoss  polymorphic_defs.protoss  polymorphic_inference.protoss  polymorphic_structural_recursion.protoss  preservation_progression.protoss  preservation_progression_type_error.protoss  protoss_h_views.pt  record_destructure.protoss  recursive.protoss  recursive_tree.protoss  result_errors.protoss  secret_leak_risk.protoss  stdlib_generics.protoss  structural_recursion.protoss  structural_variant_recursion.protoss  tuple_match.protoss  variant.protoss  (+1 more)
examples/golden/: run.sh
examples/golden/capability-denied-demo/: VALIDATE.md  protoss.toml
examples/golden/hello-world/: VALIDATE.md  protoss.toml
examples/golden/human-ask/: VALIDATE.md  protoss.toml
examples/golden/migration-demo/: VALIDATE.md  protoss.toml
examples/golden/patch-demo/: VALIDATE.md  protoss.toml
examples/golden/process-clock/: VALIDATE.md  protoss.toml
examples/golden/pure-library/: VALIDATE.md  protoss.toml
examples/harness_project/: protoss.toml
examples/modules/: app.protoss  bad_private.protoss  math.protoss
examples/self_host/: frontend_check.protoss  sample_module.protoss  typecheck_deep.protoss  typecheck_defcap.protoss  typecheck_defcap_capability_invalid.protoss  typecheck_defcap_invalid.protoss  typecheck_defpoly_invalid.protoss  typecheck_defpolycap.protoss  typecheck_defrec.protoss  typecheck_defrec_invalid.protoss  typecheck_defrec_list_input_invalid.protoss  typecheck_defrec_variant_nonstructural_invalid.protoss  typecheck_fold_variant.protoss  typecheck_fold_variant_invalid.protoss  typecheck_fold_variant_target_invalid.protoss  typecheck_fold_variant_unknown_branch.protoss  typecheck_implicit_poly.protoss  typecheck_implicit_poly_contextual_args_direct.protoss  typecheck_implicit_poly_contextual_args_nil.protoss  typecheck_implicit_poly_invalid.protoss  typecheck_implicit_poly_spine.protoss  typecheck_implicit_poly_spine_contextual_args.protoss  typecheck_implicit_poly_spine_contextual_typed_suffix.protoss  typecheck_implicit_poly_spine_contextual_typed_tail.protoss  typecheck_implicit_poly_spine_invalid.protoss  typecheck_implicit_poly_spine_prefix_cons.protoss  typecheck_implicit_poly_spine_prefix_invalid.protoss  typecheck_inferred_variant_payload_invalid.protoss  typecheck_inferred_variant_unknown.protoss  typecheck_inferred_variants.protoss  typecheck_inst.protoss  typecheck_inst_wrong_arity.protoss  typecheck_invalid.protoss  typecheck_lambda.protoss  typecheck_lists.protoss  typecheck_nested_invalid.protoss  typecheck_process.protoss  typecheck_process_annotation_invalid.protoss  typecheck_process_bind_invalid.protoss  typecheck_process_let_pure_invalid.protoss  (+6 more)
examples/workspace/: protoss.toml
lib/: agent_protocol.ml  ast.ml  backend.ml  benchmark.ml  bytecode.ml  bytecode_vm.ml  canonical_binary.ml  canonical_ir.ml  canonical_type.ml  deploy.ml  doctor.ml  dune  elm_syntax.ml  harness.ml  hashcons.ml  hasher.ml  invariants.ml  json.ml  kernel.ml  kernel.mli  kernel_error.ml  ledger.ml  loader.ml  mcp_server.ml  normal_value.ml  normalizer.ml  parser.ml  patch.ml  patch_audit.ml  protoss_sha256_stubs.c  public_error.ml  runtime.ml  runtime_store.ml  secrets.ml  sexp.ml  spec_audit.ml  store.ml  string_prim.ml  surface_syntax.ml  typechecker.ml  (+2 more)
patches/: bad_deps.json  batch_add_replace.json  batch_invalid_rollback.json  conflict_add_two.json  delete_two.json  invalid_bad_type.json  rename_two.json  replace_two.json
patches/web/: invalid_msg_view_mismatch.json  model_with_migration.json  model_without_migration.json
scripts/: v1-gate.sh
stdlib/: dune  prelude.protoss
test/: dune  fuzz_protoss.ml  smoke.ml  test_protoss.ml  vdom_patch_harness.js
test/fuzz-corpus/canonical-binary-ptb/: clean_bad_magic.ptb  clean_cvar_nonint.ptb  clean_forall_nonint.ptb  clean_len_mismatch.ptb  clean_not_canonical.ptb  clean_sexp_error_payload.ptb  clean_tvar_nonint.ptb
test/fuzz-corpus/elm-syntax/: clean_bad_sig.elm  clean_bad_type.elm  clean_case_ofx.elm  clean_dangling_plus.elm  clean_missing_body.elm
test/fuzz-corpus/patch-json/: clean_forall_nonint.json  clean_missing_fields.json  clean_sexp_error_source.json  clean_truncated.json  clean_tvar_nonint.json  clean_unknown_op.json
test/fuzz-corpus/sexp-parser/: clean_forall_nonint.protoss  clean_tvar_nonint.protoss  clean_unterminated.protoss
(+31 files in other folders)
