(executable
 (name test_protoss)
 (modules test_protoss)
 (libraries protoss unix))

(executable
 (name smoke)
 (modules smoke)
 (libraries protoss unix))

(rule
 (alias runtest)
 (action (run ./smoke.exe)))

(rule
 (alias coretest)
 (action (run ./test_protoss.exe)))

(rule
 (alias selftest)
 (action (setenv PROTOSS_RUN_SELF_HOST_TESTS 1
          (run ./test_protoss.exe))))

(rule
 (alias stdlibtest)
 (action (setenv PROTOSS_RUN_STDLIB_TESTS 1
          (run ./test_protoss.exe))))

(rule
 (alias integrationtest)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (run ./test_protoss.exe))))

; The integration section dominates the suite, so it is further split into
; independent parts (workspace/packages, web, runtime store) selected by
; PROTOSS_INTEGRATION_PART; plain @integrationtest still runs all of them in
; one process.
(rule
 (alias integrationtest-workspace)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (run ./test_protoss.exe)))))

; The workspace part itself dominates the integration section, so it is
; sliced once more by PROTOSS_WORKSPACE_PART (project chain / consumer
; packages / corruption+diff). Slices needing the workspace-a project rebuild
; it deterministically, so they are independent processes; plain
; @integrationtest-workspace still runs every slice in one process.
(rule
 (alias integrationtest-workspace-project)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (setenv PROTOSS_WORKSPACE_PART project
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-workspace-consumer)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (setenv PROTOSS_WORKSPACE_PART consumer
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-workspace-corruption)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (setenv PROTOSS_WORKSPACE_PART corruption
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-web)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (run ./test_protoss.exe)))))

; The web part dominates the integration section once the workspace slices
; run on the mini stdlib, so it is sliced by PROTOSS_WEB_PART (app artifacts
; / patches / audit+corruption+ledger). Every slice rebuilds the
; deterministic todo project itself; plain @integrationtest-web still runs
; every slice in one process.
(rule
 (alias integrationtest-web-app)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (setenv PROTOSS_WEB_PART app
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-web-patches)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (setenv PROTOSS_WEB_PART patches
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-web-audit)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (setenv PROTOSS_WEB_PART audit
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-runtime)
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART runtime
           (run ./test_protoss.exe)))))

; fulltest aggregates the per-section aliases so dune runs them as separate
; processes in parallel (wall clock = slowest section instead of their sum).
; Each section re-runs the always-on core assertions; sections are isolated
; through per-pid temp dirs, so concurrent runs do not collide.
(alias
 (name fulltest)
 (deps
  (alias runtest)
  (alias coretest)
  (alias selftest)
  (alias stdlibtest)
  (alias integrationtest-workspace-project)
  (alias integrationtest-workspace-consumer)
  (alias integrationtest-workspace-corruption)
  (alias integrationtest-web-app)
  (alias integrationtest-web-patches)
  (alias integrationtest-web-audit)
  (alias integrationtest-runtime)))
