(executable
 (name test_protoss)
 (modules test_protoss)
 (libraries protoss unix))

(executable
 (name smoke)
 (modules smoke)
 (libraries protoss unix))

(rule
 (alias runtest)
 (action (run ./smoke.exe)))

; Every test_protoss section reads fixtures from the source tree (stdlib
; prelude, examples, patches), so the rules declare them through this alias:
; plain `dune build @fulltest` (without --force) is then correct — a no-op
; when nothing changed, a targeted rerun when a fixture or the binary
; changes. Generated .protoss stores are deliberately not dependencies: the
; suite only copies example src/ trees.
(alias
 (name test-fixtures)
 (deps
  %{workspace_root}/stdlib/prelude.protoss
  (glob_files %{workspace_root}/examples/*.protoss)
  (glob_files %{workspace_root}/examples/*.pt)
  (glob_files %{workspace_root}/examples/self_host/*.protoss)
  (source_tree %{workspace_root}/examples/web/todo_app/src)
  %{workspace_root}/examples/web/todo_app/protoss.toml
  (source_tree %{workspace_root}/patches)))

(rule
 (alias coretest)
 (deps (alias test-fixtures))
 (action (run ./test_protoss.exe)))

(rule
 (alias selftest)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_SELF_HOST_TESTS 1
          (run ./test_protoss.exe))))

(rule
 (alias stdlibtest)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_STDLIB_TESTS 1
          (run ./test_protoss.exe))))

(rule
 (alias integrationtest)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (run ./test_protoss.exe))))

; The integration section dominates the suite, so it is further split into
; independent parts (workspace/packages, web, runtime store) selected by
; PROTOSS_INTEGRATION_PART; plain @integrationtest still runs all of them in
; one process.
(rule
 (alias integrationtest-workspace)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (run ./test_protoss.exe)))))

; The workspace part itself dominates the integration section, so it is
; sliced once more by PROTOSS_WORKSPACE_PART (project chain / consumer
; packages / corruption+diff). Slices needing the workspace-a project rebuild
; it deterministically, so they are independent processes; plain
; @integrationtest-workspace still runs every slice in one process.
(rule
 (alias integrationtest-workspace-project)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (setenv PROTOSS_WORKSPACE_PART project
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-workspace-consumer)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (setenv PROTOSS_WORKSPACE_PART consumer
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-workspace-corruption)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART workspace
           (setenv PROTOSS_WORKSPACE_PART corruption
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-web)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (run ./test_protoss.exe)))))

; The web part dominates the integration section once the workspace slices
; run on the mini stdlib, so it is sliced by PROTOSS_WEB_PART (app artifacts
; / patches / audit+corruption+ledger). Every slice rebuilds the
; deterministic todo project itself; plain @integrationtest-web still runs
; every slice in one process.
(rule
 (alias integrationtest-web-app)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (setenv PROTOSS_WEB_PART app
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-web-patches)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (setenv PROTOSS_WEB_PART patches
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-web-audit)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART web
           (setenv PROTOSS_WEB_PART audit
            (run ./test_protoss.exe))))))

(rule
 (alias integrationtest-runtime)
 (deps (alias test-fixtures))
 (action (setenv PROTOSS_RUN_INTEGRATION_TESTS 1
          (setenv PROTOSS_INTEGRATION_PART runtime
           (run ./test_protoss.exe)))))

; fulltest aggregates the per-section aliases so dune runs them as separate
; processes in parallel (wall clock = slowest section instead of their sum).
; Each section re-runs the always-on core assertions; sections are isolated
; through per-pid temp dirs, so concurrent runs do not collide.
; The workspace part runs whole (mini-stdlib keeps it under a second); its
; per-slice aliases remain available for targeted reruns. The web slices stay
; split: they are the long pole, and each rebuilds its own todo project.
(alias
 (name fulltest)
 (deps
  (alias runtest)
  (alias coretest)
  (alias selftest)
  (alias stdlibtest)
  (alias integrationtest-workspace)
  (alias integrationtest-web-app)
  (alias integrationtest-web-patches)
  (alias integrationtest-web-audit)
  (alias integrationtest-runtime)))
